fixed card spacing

--- a/style.css
+++ b/style.css
@@ -281,8 +281,8 @@ header img {
 }
 
 #pricing .card_grid {
-  margin-left:15%;
-  width: 70%;
+  margin-left:10%;
+  width: 80%;
 }
 
 #pricing .card {
@@ -709,7 +709,7 @@ a:hover {
   #intro div {
     margin-right: 40px;
   }
-  
+
   #large_descriptions div {
     display: block;
     margin-bottom: 150px;
